# Message-Service

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yaml
config/: config.toml.example  default.toml  dev-config.toml  dev-tags.toml  dev-templates.toml  tags.example.toml  templates.manifest.example.toml
config/dev-templates/: aggregation.html.j2  email_body.html.j2  extract_report.html.j2  transform_report.html.j2
deploy/grafana/: README.md  message-service-dashboard.json
deploy/linux/: message-service.service
deploy/windows/: README.md
docs/: L1-REQ.md  L2-REQ.md  L3-REQ.md  LOGGING-AND-EXCEPTIONS.md  ROADMAP.md  TRACE-MATRIX.md  operator-runbook.md  pipeline-integration-guide.md  template-author-guide.md  test-strategy.md  uncovered-l1-allowlist.toml
docs/adr/: 001-sqlite-for-in-flight-state.md  002-hexagonal-boundary-enforcement.md
docs/archive/: connection-pool-architecture.md
docs/diagrams/: c4-component-assembly.puml  c4-component-dashboard.puml  c4-component-ingest.puml  c4-component-persistence.puml  c4-container.puml  c4-context.puml  data-flow.puml  deployment.puml  run-state-machine.puml  sequence-happy-path.puml  sequence-orphan-path.puml  stage-state-machine.puml
docs/procedures/: dashboard-demonstration.md  linux-install-demonstration.md  windows-install-demonstration.md
docs/reviews/: README.md
docs/ui-previews/: README.md  admin-console-preview.html  login-preview.html  metrics-dashboard-preview.html  runs-board-preview.html  subscriptions-tab-preview.html
examples/: .gitignore  README.md
examples/01-hello-world/: README.md  config.toml  run.py  templates.toml
examples/02-multi-stage-aggregated/: README.md  config.toml  run.py  templates.toml
examples/02-multi-stage-aggregated/templates/: email_body.html.j2
examples/03-per-stage-attachments/: README.md  config.toml  run.py  templates.toml
examples/04-retry-flow/: README.md  config.toml  run.py  templates.toml
examples/05-tag-routing/: README.md  config.toml  run.py  tags.toml  templates.toml
examples/05-tag-routing/templates/: aggregation.html.j2
examples/06-orphan-detection/: README.md  config.toml  run.py  templates.toml
examples/07-manual-resend/: README.md  config.toml  run.py  templates.toml
examples/08-error-recovery/: README.md  config.toml  run.py  templates.toml
examples/08-error-recovery/templates/: fragment.html.j2
examples/_lib/: __init__.py  common.py  expectations.py  pretty.py  service_runner.py  smtp_capture.py
scripts/: build-trace-matrix.py  check-error-code-stability.py  check-proto-version.py  check-requirement-coverage.py  pytest-by-requirement.py  update-error-codes-lock.py
src/message_service/: __init__.py  __main__.py
src/message_service/application/: __init__.py
src/message_service/application/ports/: __init__.py  audit_archive_writer.py  audit_log.py  background_task_scheduler.py  clock.py  disposition_handler.py  mailer.py  metrics_recorder.py  (+12 more)
src/message_service/bootstrap/: __init__.py  service.py
src/message_service/config/: __init__.py  loader.py  schema.py
src/message_service/domain/: __init__.py  errors.py  ids.py
src/message_service/infrastructure/: __init__.py
src/message_service/interfaces/: __init__.py
src/message_service/observability/: __init__.py  logging_setup.py
src/message_service/templates/: __init__.py
tests/: README.md  __init__.py  conftest.py
tests/benchmarks/: __init__.py  test_password_hashing_speed.py
tests/conformance/: __init__.py  test_architecture_boundaries.py  test_audit_log_sole_deleter.py  test_clock_chokepoint.py  test_deploy_artifacts.py  test_error_code_stability.py  test_error_handling_discipline.py  test_examples_present.py  test_filterwarnings_policy.py  test_gitignore_hygiene.py  test_grafana_dashboard.py  test_io_guard_enforcement.py  test_pathlib_enforcement.py  test_proto_version_check.py  test_report_pruner_sole_deleter.py  test_requirement_coverage.py  test_sweeper_handler_registration.py  test_trace_matrix_check_mode.py  test_trace_matrix_rollup.py
tests/e2e/: README.md  __init__.py  conftest.py
tests/e2e/admin/: __init__.py  test_admin_lifecycle.py
tests/e2e/happy_path/: __init__.py  test_begin_through_send.py
tests/e2e/orphan_path/: __init__.py  test_sweeper_disposes_orphan.py
tests/e2e/resend/: __init__.py  test_admin_triggered_resend.py
tests/fixtures/: __init__.py  clocks.py  config.py  email.py  io_guard.py  loggers.py  persistence.py  proto_builders.py  service.py  templating.py  uuids.py
tests/integration/: __init__.py  conftest.py  test_cli_smoke.py  test_full_pipeline.py  test_sweeper_pipeline.py
tests/integration/application/: test_admin_subscriptions.py
tests/integration/email/: __init__.py
tests/integration/grpc/: __init__.py  test_servicer.py
tests/integration/persistence/: __init__.py  test_audit_log.py  test_audit_log_pruner.py  test_connection.py  test_migration_runner.py  test_report_pruner.py  test_run_repository.py  test_session_repository.py  test_stage_repository.py  test_subscription_repository.py  test_sweeper_action_repository.py  test_unit_of_work.py  test_unit_of_work_concurrency.py  test_user_repository.py
tests/integration/rest/: __init__.py  test_admin_audit.py  test_admin_metrics.py  test_admin_users.py  test_app.py  test_runs.py  test_subscriptions.py  test_templates.py
tests/integration/scheduler/: __init__.py
tests/integration/templating/: __init__.py
tests/unit/: __init__.py  conftest.py  test_main.py
tests/unit/bootstrap/: test_admin_reconcile.py  test_persistence_wiring.py  test_service.py
tests/unit/config/: __init__.py  test_dashboard_port_collision.py  test_loader.py  test_mail_config_shape.py  test_schema.py  test_templates_config_shape.py
tests/unit/domain/: __init__.py  test_ids.py
tests/unit/infrastructure/: test_v1_design_inspections.py
tests/unit/interfaces/: __init__.py
tests/unit/observability/: __init__.py  test_logging_setup_shape.py  test_redaction_list.py
(+202 files in other folders)
