[tool.poetry]
name = "message-service"
version = "0.1.0"
description = "A Python service that collects per-stage reports from ETL pipelines, aggregates them into HTML reports, and delivers them to subscribed users via email."
authors = ["Joey"]
readme = "README.md"
license = "Proprietary"
packages = [{ include = "message_service", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# gRPC
grpcio = "^1.66"
grpcio-tools = "^1.66"
protobuf = "^5.28"
# message-service-proto is referenced externally; uncomment and set the appropriate
# source when the proto repo is available.
# message-service-proto = { git = "ssh://git@<host>/message-service-proto.git", rev = "v0.1.0" }

# FastAPI + ASGI
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
starlette = "^0.40"
itsdangerous = "^2.2"
jinja2 = "^3.1"

# Configuration
pydantic = "^2.9"
pydantic-settings = "^2.5"
tomli = { version = "^2.0", python = "<3.11" }

# Template schema validation
jsonschema = "^4.23"
packaging = "^24.1"

# Persistence (async SQLite — see L2-PERS-001; raw SQL per decision, no ORM)
aiosqlite = "^0.20"

# SMTP
aiosmtplib = "^3.0"

# Password hashing
argon2-cffi = "^23.1"

# Observability
structlog = "^24.4"
prometheus-client = "^0.21"

# CLI
typer = "^0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
mypy = "^1.11"
ruff = "^0.6"
black = "^24.8"
pre-commit = "^3.8"
types-jsonschema = "^4.23"
httpx = "^0.27"           # FastAPI TestClient dependency

[tool.poetry.scripts]
message-service = "message_service.interfaces.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -----------------------------------------------------------------------------
# Tooling
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle, pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "D",            # pydocstyle
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "A",            # flake8-builtins
    "C4",           # flake8-comprehensions
    "PTH",          # flake8-use-pathlib (L2-DEP-002)
    "SIM",          # flake8-simplify
    "RUF",          # ruff-specific
]
ignore = [
    "D100",  # allow missing module docstring on test files, handled per-dir
    "D104",  # allow missing docstring on __init__.py
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]  # tests need not be documented

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "grpc_tools.*",
    "prometheus_client.*",
    "aiosmtplib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requirement(id): link a test to an L1/L2/L3 requirement by identifier",
    "unit: unit-level test",
    "integration: integration test spanning multiple components",
    "e2e: end-to-end test exercising the full service",
    "conformance: structural/architectural conformance test",
    "benchmark: performance benchmark, excluded from default run",
    "slow: test takes more than 1 second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.*",
]

[tool.coverage.run]
branch = true
source = ["message_service"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
