[tool.poetry]
name = "message-service"
version = "0.4.0"
description = "A Python service that collects per-stage reports from ETL pipelines, aggregates them into HTML reports, and delivers them to subscribed users via email."
authors = ["Joey"]
readme = "README.md"
license = "Proprietary"
packages = [{ include = "message_service", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# gRPC
grpcio = "^1.78"
grpcio-tools = "^1.80"
grpcio-status = "^1.80"
grpcio-health-checking = "^1.80"
grpcio-reflection = "^1.80"
protobuf = "^6.33"
message-service-proto = { git = "https://github.com/joey-huckabee/Message-Service-Proto.git", tag = "v0.1.1" }

# FastAPI + ASGI
fastapi = "^0.136"
uvicorn = { extras = ["standard"], version = "^0.37" }
starlette = "^0.47"
itsdangerous = "^2.2"
jinja2 = "^3.1"

# Configuration
pydantic = { version = "^2.12", extras = ["email"] }
pydantic-settings = "^2.7"
# tomli removed: tomllib is stdlib on 3.11+; Python floor is now 3.12.

# Template schema validation
jsonschema = "^4.25"
packaging = "^24.2"

# Persistence (async SQLite — see L2-PERS-001; raw SQL per decision, no ORM)
aiosqlite = "^0.20"

# SMTP
aiosmtplib = "^4.0"

# Password hashing
argon2-cffi = "^23.1"

# Observability
structlog = "^25.1"
prometheus-client = "^0.22"

# CLI
typer = "^0.15"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.0"
pytest-cov = "^7.1"
mypy = "^1.20"
ruff = "^0.15"
pre-commit = "^4.0"
types-jsonschema = "^4.25"
httpx = "^0.28"           # FastAPI TestClient dependency
aiosmtpd = "^1.4.6"

[tool.poetry.scripts]
message-service = "message_service.interfaces.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -----------------------------------------------------------------------------
# Tooling
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle, pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "D",            # pydocstyle
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "A",            # flake8-builtins
    "C4",           # flake8-comprehensions
    "PTH",          # flake8-use-pathlib (L2-DEP-002)
    "SIM",          # flake8-simplify
    "RUF",          # ruff-specific
    "BLE",          # flake8-blind-except (L3-ERR-019)
    "S110",         # flake8-bandit: try-except-pass (L3-ERR-019)
    "S112",         # flake8-bandit: try-except-continue (L3-ERR-019)
]
ignore = [
    "D100",  # allow missing module docstring on test files, handled per-dir
    "D104",  # allow missing docstring on __init__.py
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]  # tests need not be documented

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "grpc_tools.*",
    "grpc_health.*",
    "grpc_reflection.*",
    "prometheus_client.*",
    "aiosmtplib.*",
    "aiosmtpd.*",
    "google.protobuf.*",
    "message_service_proto.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--basetemp=.pytest_tmp",
    "--cov=message_service",
    "--cov-report=term-missing",
    "--cov-report=html:.coverage_html",
    "--cov-report=xml:.coverage.xml",
    "--cov-branch",
    "--cov-fail-under=85",
]
markers = [
    "requirement(id): link a test to an L1/L2/L3 requirement by identifier",
    "unit: unit-level test",
    "integration: integration test spanning multiple components",
    "e2e: end-to-end test exercising the full service",
    "conformance: structural/architectural conformance test",
    "benchmark: performance benchmark, excluded from default run",
    "slow: test takes more than 1 second",
    "allow_io: opt out of the unit-tier I/O guard (sockets / aiosqlite); use sparingly for tests that legitimately need real adapters to verify atomicity guarantees",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.*",
    # uvicorn[standard] imports websockets.legacy; the deprecation
    # is upstream's, will be cleared when uvicorn migrates off legacy.
    "ignore::DeprecationWarning:websockets.legacy",
    "ignore::DeprecationWarning:uvicorn.protocols.websockets.*",
]

[tool.coverage.run]
branch = true
source = ["message_service"]
omit = [
    "*/interfaces/cli/__main__.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = ".coverage_html"
